Xong đóng gói function

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-OPEN_AI_API_KEY= ""
+OPEN_AI_API_KEY= "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"
 CHROMADB_HOST = "localhost"
 CHROMADB_PORT = "8000"
 PINECONE_API_KEY = "4e39dee1-4c37-4399-865f-eabb67080bbc"
